"ChangeLog"

2007-06-15	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-34-merged-LPxx-04:
	  Branch merge.  Support for testing on non LP32 platforms.


2007-06-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-32-LPxx-04:
	  configure.ac: removed src/util/test/test-expect.sh[.in]


2007-06-13	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-33:
	  configure.ac: AC_CHECK_SIZEOF tests all wrapped in AC_LANG C++ now, 
		so CXXFLAGS need not be copied to CFLAGS for correctness.


	* HACKT-00-01-04-main-00-81-32:
	  configure.ac: Added AM_CONDITIONAL ABI_ILP32


2007-06-09	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-29:
	  Added support for guile-1.6's API!
	  config/guile.m4: a ton more API function checks.
	  README: downgraded guile version requirement
	  Added scripts/bootstrap.freebsd.


2007-06-08	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-28:
	  Added lib/mk/Makefile.am, installed makefile templates, 
		now generated to reduce maintainence replication.


2007-06-04	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-25:
	  configure.ac: date bump, added summary at end
	  pkg/*.info: updates of fink packages


2007-05-03	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-22-merged-chpsim-04-34:
	  chpsim-04 branch merge.


2007-05-03	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-21:
	  config/guile.m4: eval and AC_SUBST(GUILE_CONFIG_VERSION)
		now report this in build reports.  
	  configure.ac: date bump


2007-04-20	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-19-merged-scm-01-37:
	  scm-01 branch merge.


2007-03-26	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-14:
	  Now install bin/init_hackt.[c]sh scripts, subst'd by configure.