@@ -1,5 +1,5 @@
 dnl "config/hackt.m4"
-dnl	$Id: hackt.m4,v 1.8 2006/12/01 23:28:20 fang Exp $
+dnl	$Id: hackt.m4,v 1.9 2007/06/15 20:28:41 fang Exp $
 dnl
 dnl This file is for autoconf macros specific to HACKT.
 dnl General-purpose macros should be based in other m4 files.  
@@ -82,6 +82,7 @@ AC_DEFUN([FANG_CONFTEST_FLAGS],
 [AC_REQUIRE([FANG_AM_FLAGS])
 CONFTEST_CFLAGS="$FANG_DIALECT_FLAGS $FANG_WARN_FLAGS $FANG_WARN_CFLAGS $CONFTEST_NOWARN_FLAGS $CONFTEST_NOWARN_CFLAGS $CFLAGS"
 CONFTEST_CXXFLAGS="$FANG_DIALECT_FLAGS $FANG_WARN_FLAGS $FANG_WARN_CXX_FLAGS $CONFTEST_NOWARN_FLAGS $CONFTEST_NOWARN_CXXFLAGS $CXXFLAGS"
+AC_MSG_NOTICE("CONFTEST_CXXFLAGS = $CONFTEST_CXXFLAGS")
 ])
 
 dnl @synopsis HACKT_ARG_WITH_XDR
